--- a/my-app/src/MainFrame.css
+++ b/my-app/src/MainFrame.css
@@ -10,6 +10,7 @@ body {
   font-weight:600;
   font-family: 'Orbitron', sans-serif;
   background:linear-gradient(#1290c2, #a2eec8);
+  -webkit-appearance: none;
 }
 
 .wrapper {
